Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15978

QLibraryInfo::location(TranslationsPath) does not honor qtlibinfix

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.4
    • 4.7.2
    • Build System
    • None
    • Windows, configure.exe
    • a05ece41b9adbbe2f5aebd305e84e29693a39bcf

    Description

      If I configure Qt with...

      -qtlibinfix _myinfix

      ..., I expect QLibraryInfo::location(TranslationsPath) to return something like "/resource/qt_myinfix/translations". But configure creates an entry in qconfig.cpp that looks like...

      static const char qt_configure_translations_path_str [512 + 12] = "qt_trnspath=\\resource\\qt
      translations";

      ...but it should instead be...

      static const char qt_configure_translations_path_str [512 + 12] = "qt_trnspath=\\resource\\qt_myinfix
      translations";

      Therefore QLibraryInfo::location(TranslationsPath) returns a wrong path when configureing Qt with qtlibinfix

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes