make qtlibinfix apply to QT_INSTALL_TRANSLATIONS

the unix configure already got it right

Task-number: QTBUG-15978
Reviewed-by: Alessandro Portale
Reviewed-by: mariusSO